# cuddlefish

./: README.md  render.yaml  shell.nix
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  dev.sh  download-gql-schemas.sh  download-hasura-schema.sh  package.json
api/gql/github/: queries.graphql  schema.json
api/gql/hasura/: queries.graphql  schema.json
api/hasura_gql/: queries.graphql
api/src/: auth.rs  github.rs  hasura.rs  main.rs
hasura/: Dockerfile  Makefile  README.md  arm64.dockerfile  config.yaml  console.PROD.sh  console.dev.sh  dev.sh  docker-compose.macos.yaml  docker-compose.yaml
hasura/metadata/: actions.graphql  actions.yaml  remote_schemas.yaml  tables.yaml
hasura/migrations/1608854420109_alter_table_public_users_add_column_github_node_id/: down.sql
hasura/migrations/1608854607164_alter_table_public_users_alter_column_github_node_id/: up.sql
hasura/migrations/1608854644620_alter_table_public_users_alter_column_github_id/: up.sql
next/: README.md  codegen.admin.yml  codegen.github.yml  codegen.yml  common_utils.ts  dev.sh  github.ts  jest.config.js  package-lock.json  package.json  partialbug.ts  server_utils.ts  test.sh  tunnel.sh  utils.ts
next/__tests__/: commit_lookup.ts  emailable.ts  repo_lookup.ts  safesets.ts
next/pages/api/: config.ts  (+8 more)
next/src/: common_utils.ts  github.ts  server_utils.ts  users.ts
next/styles/: globals.css
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  codegen.yml  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: anonymous-hasura-queries.ts  comments.ts  credentials.ts  extension.ts  git.ts  utils.ts
web/: .gitignore  README.md  config-overrides.js  download-gql-schemas.sh  package.json  relay.config.js
web/gql/: hasura.graphql
web/schemas/: hasura.graphql
web/src/: App.tsx  CodeAndComments.tsx  CommentForm.tsx  Comments.tsx  CustomRelayEnvProvider.tsx  Header.tsx  NewThreadPopover.tsx  RedirectMemoContext.ts  ThreadPopover.tsx  auth.tsx  index.css  index.scss  relay-env.ts  typehacks.d.ts  useClickOutside.ts
(+84 files in other folders)
