[package]
name = "api"
version = "0.0.0"
authors = ["Samuel Ainsworth <skainsworth@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8"
chrono = "0.4"
cookie = "0.15"
failure = "0.1"
futures = "0.3"
git2 = "0.13"
graphql_client = "0.9"
# We can't upgrade hyper or tokio until https://github.com/graphql-rust/juniper/pull/888 lands.
hyper = "0.13"
juniper = "0.15"
juniper_hyper = "0.6"
lazy_static = "1.4"
log = "0.4"
# See https://github.com/instructure/paseto/issues/37
paseto = "1.0"
# Can't upgrade reqwest to 0.11 until tokio >= 1.0
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
url = "2.1"
time = "0.2"
