[package]
name = "api"
version = "0.0.0"
authors = ["Samuel Ainsworth <skainsworth@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4"
cookie = "0.15"
env_logger = "0.9"
futures = "0.3"
git2 = "0.16"
graphql_client = "0.10"
hyper = "0.14"
juniper = "0.15.7"
juniper_hyper = "0.8"
lazy_static = "1.4"
log = "0.4"
paseto = "2.0.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tokio = { version = "1.16", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.1"
